increase last toc section margin to avoid overlap with settings panel

--- a/td-documentation-reactjs/src/doc-elements/DocumentationLayout.css
+++ b/td-documentation-reactjs/src/doc-elements/DocumentationLayout.css
@@ -117,6 +117,10 @@
     padding-top: 10px;
 }
 
+.toc-section:last-child {
+    margin-bottom: 55px;
+}
+
 .toc-section .title {
     font-size: 14px;
     line-height: 35px;
